[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/dialogue_background.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/long_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/long_button.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/ui/SkillSelectionUI.gd" type="Script" id=5]
[ext_resource path="res://assets/ui/textbox.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[node name="SkillSelectionUI" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.85
margin_left = -350.0
margin_top = -80.0
margin_right = 350.0
margin_bottom = 80.0
texture = ExtResource( 1 )
expand = true

[node name="BasicAttack" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.84
anchor_right = 0.5
anchor_bottom = 0.84
margin_left = -299.0
margin_top = -46.0
margin_right = -107.0
margin_bottom = 1.99997
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Control/BasicAttack"]
anchor_left = 1.584
anchor_top = 1.0
anchor_right = 1.584
anchor_bottom = 1.0
margin_left = -298.128
margin_top = -34.0
margin_right = -44.128
margin_bottom = -2.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 1 )
text = "Basic: Katana Slash"
align = 1
autowrap = true

[node name="Skill1" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.84
anchor_right = 0.5
anchor_bottom = 0.84
margin_left = -299.0
margin_top = 11.0
margin_right = -107.0
margin_bottom = 59.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Control/Skill1"]
anchor_left = 1.584
anchor_top = 1.0
anchor_right = 1.584
anchor_bottom = 1.0
margin_left = -293.128
margin_top = -34.0
margin_right = -43.128
margin_bottom = -2.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 1 )
text = "Fiery Dance"
align = 1
autowrap = true

[node name="Skill2" type="TextureButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.84
anchor_right = 0.5
anchor_bottom = 0.84
margin_left = -86.0
margin_top = -46.0
margin_right = 106.0
margin_bottom = 1.99997
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Control/Skill2"]
anchor_left = 1.584
anchor_top = 1.0
anchor_right = 1.584
anchor_bottom = 1.0
margin_left = -293.128
margin_top = -34.0
margin_right = -44.128
margin_bottom = -2.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 1 )
text = "Magma Sunder"
align = 1
autowrap = true

[node name="SelectTarget" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.489
anchor_top = 0.85
anchor_right = 0.489
anchor_bottom = 0.85
margin_left = -176.736
margin_top = -41.0
margin_right = 175.264
margin_bottom = 46.0
texture = ExtResource( 6 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="SelectTarget"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -22.0
margin_right = 124.5
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "Select Target"
align = 1
autowrap = true

[connection signal="pressed" from="Control/BasicAttack" to="Control" method="_on_BasicAttack_pressed"]
